Adding in feedparser

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "fs": "0.0.2",
     "markov": "0.0.7",
     "require": "^2.4.18",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "feedparser": "~1.1.0",
+    "request": "~2.55.0"
   }
 }
