Adding in twit dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "require": "^2.4.18",
     "util": "^0.10.3",
     "feedparser": "~1.1.0",
-    "request": "~2.55.0"
+    "request": "~2.55.0",
+    "twit": "~1.1.20"
   }
 }
