--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "util": "^0.10.3",
     "feedparser": "~1.1.0",
     "request": "~2.55.0",
-    "twit": "~1.1.20"
+    "twit": "~1.1.20",
+    "node-schedule": "~0.2.7"
   }
 }
